# persona-router

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
community-personas/: SOURCES.jsonl
community-personas/changshu-anuo/: LICENSE
community-personas/chenze-skill/: SOURCE.md
community-personas/elon-musk-skill/: SOURCE.md
community-personas/guodegang-skills/: LICENSE  README.md
community-personas/hu-chenfeng-skill/: SOURCE.md
community-personas/ilya-sutskever-skill/: SOURCE.md
community-personas/karlmarx-skill/: SOURCE.md
community-personas/mises-perspective/: README.md  SOURCE.md
community-personas/paul-graham-skill/: SOURCE.md
community-personas/star-skill/: README.md
community-personas/steve-jobs-skill/: SOURCE.md
community-personas/tong-jincheng-skill/: SOURCE.md
docs/: architecture.md  cli-demo.md  community-persona-imports.md  dokobot-search-skill.md  engineering-todo.md  frontend-contract.md  persona-agent-runtime.md  persona-generation-spec-v2.md  persona-scripts.md  release-checklist.md  security-and-boundaries.md
examples/: community-persona-registry.json  persona-registry.json  session-state.json
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  (+4 more)
imported-personas/: SOURCES.jsonl
persona_router/: __init__.py  api.py  boundaries.py  cli.py  commands.py  executor.py  llm.py  planner.py  registry.py  runtime_loader.py  session.py  store.py
registries/: local.json
schemas/: persona-agent.schema.json  persona-session.schema.json  turn-plan.schema.json
scripts/: check_community_updates.py  import_community_personas.py  quality_check.py  run_router_evals.py
tests/: test_api.py  test_boundaries.py  test_cli.py  test_community_audit.py  test_registry.py  test_schemas.py  test_session_planner_executor.py  test_store.py
warren-buffett-perspective/: SKILL.md  cases.jsonl  evals.md  persona.json
(+183 files in other folders)
