[project]
name = "persona-router"
version = "0.1.0"
description = "Stateful router for persona packages and community Agent Skills."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "jsonschema>=4.0.0",
  "uvicorn>=0.23.0"
]

[project.scripts]
persona-router = "persona_router.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
