[project]
name = "persona-router"
version = "0.1.0"
description = "Stateful router for persona packages and community Agent Skills."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "jsonschema>=4.0.0",
  "python-dotenv>=1.0.0",
  "uvicorn>=0.23.0"
]

[project.optional-dependencies]
llm = ["openai>=1.30.0"]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
persona-router = "persona_router.cli:main"

[tool.setuptools.packages.find]
include = ["persona_router*"]
exclude = [
  "persona_router.tests*",
  "persona_router.scripts*",
  "persona_router.evals*",
  "frontend*",
  "docs*",
  "skills*",
  "community-personas*",
  "local-personas*",
  "registries*",
]

[tool.pytest.ini_options]
testpaths = ["persona_router/tests"]
pythonpath = ["."]
